package Application;

import Controller.MainController;

public class Application {
    public static void main(String[] args) throws InterruptedException {
        MainController mainController = new MainController();
    }
}
