@startuml

title __SERVER's Class Diagram__\n

  namespace Application {
    class Application.Application {
    }
  }
  

  namespace Controller {
    class Controller.AuthenticationController {
    }
  }
  

  namespace Controller {
    class Controller.CommunicationProtocol {
    }
  }
  

  namespace Controller {
    class Controller.GraphController {
    }
  }
  

  namespace Controller {
    class Controller.JGraphXAdapter {
    }
  }
  

  namespace Controller {
    class Controller.MainController {
    }
  }
  

  namespace Controller {
    class Controller.ParcelController {
    }
  }
  

  namespace Controller {
    class Controller.QueryHandler {
    }
  }
  

  namespace Controller {
    class Controller.Serializer {
    }
  }
  

  namespace DataAccessLayer {
    class DataAccessLayer.AbstractDAO {
    }
  }
  

  namespace DataAccessLayer {
    class DataAccessLayer.ConnectionBuilder {
    }
  }
  

  namespace DataAccessLayer {
    class DataAccessLayer.ParcelDAO {
    }
  }
  

  namespace DataAccessLayer {
    class DataAccessLayer.UserDAO {
    }
  }
  

  namespace Model {
    class Model.Administrator {
    }
  }
  

  namespace Model {
    class Model.Coordinator {
    }
  }
  

  namespace Model {
    class Model.Parcel {
    }
  }
  

  namespace Model {
    class Model.Postman {
    }
  }
  

  namespace Model {
    class Model.User {
    }
  }
  

  Controller.AuthenticationController o-- Controller.MainController : mainController
  Controller.AuthenticationController o-- DataAccessLayer.UserDAO : userDAO
  Controller.CommunicationProtocol .up.|> java.io.Serializable
  Controller.JGraphXAdapter .up.|> org.jgrapht.event.GraphListener
  Controller.JGraphXAdapter -up-|> com.mxgraph.view.mxGraph
  Controller.MainController o-- Controller.AuthenticationController : authenticationController
  Controller.MainController o-- Controller.ParcelController : parcelController
  Controller.MainController o-- DataAccessLayer.UserDAO : userDAO
  Controller.ParcelController o-- Controller.GraphController : graphController
  Controller.ParcelController o-- Controller.MainController : mainController
  Controller.ParcelController o-- DataAccessLayer.ParcelDAO : parcelDAO
  Controller.QueryHandler o-- Controller.AuthenticationController : authenticationController
  Controller.QueryHandler o-- Model.User : loggedUser
  Controller.QueryHandler o-- Controller.MainController : mainController
  Controller.QueryHandler o-- Controller.ParcelController : parcelController
  DataAccessLayer.ParcelDAO -up-|> DataAccessLayer.AbstractDAO
  DataAccessLayer.UserDAO -up-|> DataAccessLayer.AbstractDAO
  Model.Administrator .up.|> java.io.Serializable
  Model.Administrator -up-|> Model.User
  Model.Coordinator .up.|> java.io.Serializable
  Model.Coordinator -up-|> Model.User
  Model.Parcel .up.|> java.io.Serializable
  Model.Postman .up.|> java.io.Serializable
  Model.Postman -up-|> Model.User
  Model.User .up.|> java.io.Serializable
  Model.User o-- Model.User.Type : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
